styles/banner.scss
.hero-banner {
  flex: 1 1;
  flex-direction: column;
  min-height: 100vh;

  .swiper {
    cursor: grab;
  }
}

.hero-banner-container {
  position: relative;
  height: 75vh;
  width: 100%;
  padding-top: 4.5rem;

  .border-bottom {
    z-index: 1;

    top: unset !important;
    right: unset !important;
    bottom: -1px !important;
    left: 0 !important;

    height: auto !important;
    min-height: initial !important;
  }

  .image {
    display: flex;
    height: 100%;
    width: 100%;
    align-items: center;
    justify-content: center;

    img {
      width: 100%;
      height: auto;
      padding-bottom: 5rem;
      object-fit: cover;
      filter: blur(2px);
      transition: all 0.5s ease;

      &:hover {
        filter: blur(3px);
        transform: scale(1.01);
      }
    }

    .banner-product-details {
      position: absolute;
      left: 0;
      right: 0;
      top: 50%;
      transform: translateY(-50%);

      width: 50%;
      margin: auto;
      color: #f1f3f5;
      text-align: center;
      z-index: 1;

      div {
        user-select: none;
      }

      .subtitle {
        letter-spacing: 2px;
        font-size: 1.25rem;
        font-weight: 600;
        text-transform: uppercase;
      }

      .title {
        font-weight: 700;
        font-size: 3.125rem;
        line-height: 1.25;
        letter-spacing: 2px;
      }

      .btn-row button {
        // color: #2d89fa;
        // background: #fff;
        color: white;
        background: rgba(255, 255, 255, 0.25);
      }
    }

    .swiper-pagination {
      margin-bottom: 2rem;
    }
  }

  @media screen and (max-width: 900px) {
    height: 70vh;
    padding-top: 3.5rem;

    .image {
      img {
        height: 120%;
        width: 100%;
      }

      .banner-product-details {
        .subtitle {
          font-size: 1rem;
          margin-bottom: 0.5rem;
        }

        .title {
          font-size: 2rem;
        }

        .btn-row {
          margin: 3rem 0;
        }
      }

      .swiper-pagination {
        margin-bottom: 0.5rem;
      }
    }
  }
}

.footer-banner-container {
  margin: auto !important;
  height: 45vh;
  max-width: 1400px;

  border-radius: 1rem;
  margin: 4rem;

  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url(./../public/assets/banner-bg.png);

  .footer-banner {
    height: 100%;
    width: 100%;
    padding: 2rem;
    border-radius: inherit;

    background: rgba(151, 198, 255, 0.1);
    box-shadow: 0 4px 16px 0 rgba(31, 38, 135, 0.15);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    border: 1px solid rgba(255, 255, 255, 0.18);

    .banner-details {
      flex: 1;
      flex-direction: column;
      height: 100%;
      gap: 1rem;

      div {
        color: #fff;
        user-select: none;
        text-align: center;
        text-shadow: 0 0 1px invert($color: #fff);
      }

      .discount {
        font-weight: 700;
        font-size: 5rem;
        line-height: 1.25;
        letter-spacing: 3px;
      }

      .description {
        font-weight: 600;
        font-size: 2rem;
        line-height: 1.25;
        letter-spacing: 2px;
      }

      .sale {
        font-weight: 500;
        font-size: 1.25rem;
        line-height: 1.25;
        letter-spacing: 2px;
      }
    }

    .swiper {
      width: 280px;
      max-width: 50%;
      height: 100%;
      margin-left: 3rem;
    }

    .swiper-slide {
      aspect-ratio: 8 / 11;
      width: 100%;
      height: 100%;
      border-radius: 18px;
      font-size: 22px;
      font-weight: bold;
      color: #f1f3f5;

      img {
        height: 100%;
        width: auto;
        object-fit: cover;
      }
    }
  }

  @media screen and (max-width: 900px) {
    height: auto;
    margin: 1rem;

    background-position: bottom;

    .footer-banner {
      flex-direction: column;
      gap: 2rem;

      backdrop-filter: blur(6px);
      -webkit-backdrop-filter: blur(6px);

      .banner-details {
        .discount {
          font-size: 2rem;
        }

        .description {
          font-size: 1rem;
        }

        .sale {
          font-size: 0.75rem;
        }
      }

      .swiper {
        width: auto;
        max-width: 50%;
        height: 100%;
        margin: 0;
      }
    }
  }
}

